--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -88,7 +88,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/${{ github.repository }}/dependency-graph/sbom \
-          -o "${FILE_PREFIX}-GitHub-sbom.json"
+          -o ${{ env.FILE_PREFIX }}-GitHub-sbom.json"
 
     # - name: Verify SBOM JSON File
     #   run: |
