--- a/.github/workflows/stubs/ci-main-pull-request-stub.yml
+++ b/.github/workflows/stubs/ci-main-pull-request-stub.yml
@@ -17,7 +17,7 @@ permissions:
   contents: read
   
 env:
-  STUB_VERSION: "1.0.1" 
+  STUB_VERSION: "1.0.3" 
   
 jobs: 
   echo_version:
@@ -34,42 +34,53 @@ jobs:
     permissions: 
       id-token: write
       contents: read
-    
+
     with:   
       visibility: ${{ github.event.repository.visibility }}   #  private, public, or internal
       # go-private-modules: GOPRIVATE for Go private modules, default is 'github.com/progress-platform-services/*
-      
+      version: '1.0.8' # ${{ github.event.repository.version }}
+      # if you have a version file, you can read it in to an environment variable with
+  #     - name: Set variables
+  #       run: |
+  #         VER=$(cat VERSION)
+  #         echo "VERSION=$VER" >> $GITHUB_ENV
+  #   then ${{ env.VERSION }}
+
       # complexity-checks
-      perform-complexity-checks: true
+      perform-complexity-checks: false
       # scc-output-filename: 'scc-output.txt'
-      perform-language-linting: true    # Perform language-specific linting and pre-compilation checks
+      perform-language-linting: false    # Perform language-specific linting and pre-compilation checks
 
       # trufflehog secret scanning
       perform-trufflehog-scan: true
       
+      # ADDED TRIVY SCAN
+      perform-trivy-scan: true
+      
       # BlackDuck SAST (Polaris) and SCA scans
       # requires secrets POLARIS_SERVER_URL and POLARIS_ACCESS_TOKEN
-      perform-blackduck-polaris: true
-      polaris-application-name: 'Chef-Chef360'  # one of these: Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services
+      perform-blackduck-polaris: false
+      polaris-application-name: 'Chef-Automate'  # one of these: Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services, Chef-Other
       polaris-project-name: ${{ polaris_application_name }}-${{ github.event.repository.name }}  # typically the application name, followed by - and the repository name, for example Chef-Chef360-chef-vault
-      perform-blackduck-sca-scan: true
-     
+      # 'ArchSample'
+
       # perform application build and unit testing, will use custom repository properties when implemented for chef-primary-application, chef-build-profile, and chef-build-language
       build: false
       # ga-build-profile: $chef-ga-build-profile   
       # language: $chef-ga-build-language   # this will be removed from stub as autodetected in central GA
       unit-tests: false
  
-      # perform SonarQube scan, withor without unit test coverage data
+      # perform SonarQube scan, with or wihout unit test coverage data
       # requires secrets SONAR_TOKEN and SONAR_HOST_URL (progress.sonar.com)
       perform-sonarqube-scan: true
-      perform-sonar-build: true
+      # perform-sonar-build: true
       # build-profile: 'default' 
-      report-unit-test-coverage: true
+      # report-unit-test-coverage: true
 
       # report to central developer dashboard
-      report-to-atlassian-dashboard: true
+      report-to-atlassian-dashboard: false
       quality-product-name: 'Chef-360'   # product name for quality reporting, like Chef360, Courier, Inspec
+      # quality-product-name: ${{ github.event.repository.name }}   # like 'Chef-360' - the product name for quality reporting, like Chef360, Courier, Inspec
       # quality-sonar-app-name: 'YourSonarAppName'
       # quality-testing-type: 'Integration' like Unit, Integration, e2e, api, Performance, Security
       # quality-service-name: 'YourServiceOrRepoName'
@@ -83,10 +94,14 @@ jobs:
       # generate and export Software Bill of Materials (SBOM) in various formats
       generate-sbom: true
       export-github-sbom: true      # SPDX JSON artifact on job instance  
-      generate-blackduck-sbom: true   # requires BlackDuck secrets and inputs as above for SAST scanning
+      perform-blackduck-sca-scan: true # combined with generate sbom & generate github-sbom, also needs version above
+      blackduck-project-group-name: 'Chef-Shared-Services' # typically one of (Chef), Chef-Agents, Chef-Automate, Chef-Chef360, Chef-Habitat, Chef-Infrastructure-Server, Chef-Shared-Services'
+      blackduck-project-name: ${{ github.event.repository.name }} # BlackDuck project name, typically the repository name
+      generate-blackduck-sbom: false # obsolete, use perform-blackduck-sca-scan instead
+        
       generate-msft-sbom: false
       license_scout: false      # Run license scout for license compliance (uses .license_scout.yml)
-      
+
       # udf1: 'default' # user defined flag 1
       # udf2: 'default' # user defined flag 2 
       # udf3: 'default' # user defined flag 3     
