--- a/.github/workflows/cd-public-builder-grype-scan.yml
+++ b/.github/workflows/cd-public-builder-grype-scan.yml
@@ -124,23 +124,23 @@ jobs:
 
       - name: Install Habitat Package under test (Linux)
         run: |
-            PACKAGE="${{ inputs.publish-habitat-hab_package }}"
-            if [ -n "${{ inputs.publish-habitat-hab_version }}" ]; then
-                PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_version }}"
+            PACKAGE="${{ inputs.hab_package }}"
+            if [ -n "${{ inputs.hab_version }}" ]; then
+                PACKAGE="${PACKAGE}/${{ inputs.hab_version }}"
             fi
-            if [ -n "${{ inputs.publish-habitat-hab_release }}" ]; then
-                PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_release }}"
+            if [ -n "${{ inputs.hab_release }}" ]; then
+                PACKAGE="${PACKAGE}/${{ inputs.hab_release }}"
             fi
             
             INSTALL_CMD="sudo hab pkg install ${PACKAGE}"
             
-            if [ -n "${{ inputs.publish-habitat-hab_channel }}" ]; then
-                INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.publish-habitat-hab_channel }}"
+            if [ -n "${{ inputs.hab_channel }}" ]; then
+                INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.hab_channel }}"
             fi
             
-            AUTH_TOKEN="${{ inputs.publish-habitat-hab_auth_token }}"
+            AUTH_TOKEN="${{ inputs.hab_auth_token }}"
             if [ -z "${AUTH_TOKEN}" ]; then
-                AUTH_TOKEN="${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
+                AUTH_TOKEN="${{ secrets.GA_DOWNLOAD_GRYPE_LICENSE_ID }}"
                 echo "Using token from repository secret"
             else
                 echo "Using token from workflow input"
@@ -156,14 +156,14 @@ jobs:
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
             # Find the installed package path. 'hab pkg path' returns the path to the latest installed version.
-            PKG_PATH=$(hab pkg path ${{ inputs.publish-habitat-hab_package }})
+            PKG_PATH=$(hab pkg path ${{ inputs.hab_package }})
             # run grype in runner
-            grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} 
+            grype dir:$PKG_PATH --name ${{ inputs.hab_package }} 
             # run grype to output to file (which is uploaded to the job as an artifact)
-            OUTPUT_FILE="grype-results-ubuntu-${{ inputs.publish-habitat-hab_package }}.txt"
+            OUTPUT_FILE="grype-results-ubuntu-${{ inputs.hab_package }}.txt"
             OUTPUT_FILE="${OUTPUT_FILE//\//-}"
             echo $OUTPUT_FILE
-            grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} > $OUTPUT_FILE
+            grype dir:$PKG_PATH --name ${{ inputs.hab_package }} > $OUTPUT_FILE
             echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
             
       - name: Upload Grype Scan Results
@@ -202,35 +202,35 @@ jobs:
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
             # Find the installed package path. 'hab pkg path' returns the path to the latest installed version.
-            PKG_PATH=$(hab pkg path ${{ inputs.publish-habitat-hab_package }})
+            PKG_PATH=$(hab pkg path ${{ inputs.hab_package }})
             # run grype in runner
-            grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} 
+            grype dir:$PKG_PATH --name ${{ inputs.hab_package }} 
             # run grype to output to file (which is uploaded to the job as an artifact)
-            OUTPUT_FILE="grype-results-macos-${{ inputs.publish-habitat-hab_package }}.txt"
+            OUTPUT_FILE="grype-results-macos-${{ inputs.hab_package }}.txt"
             OUTPUT_FILE="${OUTPUT_FILE//\//-}"
             echo $OUTPUT_FILE
-            grype dir:$PKG_PATH --name ${{ inputs.publish-habitat-hab_package }} > $OUTPUT_FILE
+            grype dir:$PKG_PATH --name ${{ inputs.hab_package }} > $OUTPUT_FILE
             echo "OUTPUT_FILE=$OUTPUT_FILE" >> $GITHUB_ENV
             
       - name: Install Habitat Package under test (MacOS)
         run: |
-            PACKAGE="${{ inputs.publish-habitat-hab_package }}"
-            if [ -n "${{ inputs.publish-habitat-hab_version }}" ]; then
-                PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_version }}"
+            PACKAGE="${{ inputs.hab_package }}"
+            if [ -n "${{ inputs.hab_version }}" ]; then
+                PACKAGE="${PACKAGE}/${{ inputs.hab_version }}"
             fi
-            if [ -n "${{ inputs.publish-habitat-hab_release }}" ]; then
-                PACKAGE="${PACKAGE}/${{ inputs.publish-habitat-hab_release }}"
+            if [ -n "${{ inputs.hab_release }}" ]; then
+                PACKAGE="${PACKAGE}/${{ inputs.hab_release }}"
             fi
             
             INSTALL_CMD="sudo hab pkg install ${PACKAGE}"
             
-            if [ -n "${{ inputs.publish-habitat-hab_channel }}" ]; then
-                INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.publish-habitat-hab_channel }}"
+            if [ -n "${{ inputs.hab_channel }}" ]; then
+                INSTALL_CMD="${INSTALL_CMD} --channel ${{ inputs.hab_channel }}"
             fi
             
-            AUTH_TOKEN="${{ inputs.publish-habitat-hab_auth_token }}"
+            AUTH_TOKEN="${{ inputs.hab_auth_token }}"
             if [ -z "${AUTH_TOKEN}" ]; then
-                AUTH_TOKEN="${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
+                AUTH_TOKEN="${{ secrets.GA_DOWNLOAD_GRYPE_LICENSE_ID }}"
                 echo "Using token from repository secret"
             else
                 echo "Using token from workflow input"
@@ -291,23 +291,23 @@ jobs:
 
       - name: Install Habitat Package under test (Windows)
         run: |
-            $Package = "${{ inputs.publish-habitat-hab_package }}"
-            if ("${{ inputs.publish-habitat-hab_version }}" -ne "") {
-                $Package = "${Package}/${{ inputs.publish-habitat-hab_version }}"
+            $Package = "${{ inputs.hab_package }}"
+            if ("${{ inputs.hab_version }}" -ne "") {
+                $Package = "${Package}/${{ inputs.hab_version }}"
             }
-            if ("${{ inputs.publish-habitat-hab_release }}" -ne "") {
-                $Package = "${Package}/${{ inputs.publish-habitat-hab_release }}"
+            if ("${{ inputs.hab_release }}" -ne "") {
+                $Package = "${Package}/${{ inputs.hab_release }}"
             }
             
             $InstallCmd = "hab pkg install ${Package}"
             
-            if ("${{ inputs.publish-habitat-hab_channel }}" -ne "") {
-                $InstallCmd = "${InstallCmd} --channel ${{ inputs.publish-habitat-hab_channel }}"
+            if ("${{ inputs.hab_channel }}" -ne "") {
+                $InstallCmd = "${InstallCmd} --channel ${{ inputs.hab_channel }}"
             }
             
-            $AuthToken = "${{ inputs.publish-habitat-hab_auth_token }}"
+            $AuthToken = "${{ inputs.hab_auth_token }}"
             if ([string]::IsNullOrEmpty($AuthToken)) {
-                $AuthToken = "${{ secrets.HAB_PUBLIC_BLDR_PAT }}"
+                $AuthToken = "${{ secrets.GA_DOWNLOAD_GRYPE_LICENSE_ID }}"
                 Write-Host "Using token from repository secret"
             } else {
                 Write-Host "Using token from workflow input"
@@ -323,14 +323,14 @@ jobs:
         timeout-minutes: 15 # Sets a 15-minute timeout for this specific step
         run: |
             # Find the installed package path. 'hab pkg path' returns the path to the latest installed version.
-            $PkgPath = hab pkg path ${{ inputs.publish-habitat-hab_package }}
+            $PkgPath = hab pkg path ${{ inputs.hab_package }}
             # run grype in runner
-            grype dir:$PkgPath --name ${{ inputs.publish-habitat-hab_package }}
+            grype dir:$PkgPath --name ${{ inputs.hab_package }}
             # run grype to output to file (which is uploaded to the job as an artifact)
-            $OutputFile = "grype-results-windows-${{ inputs.publish-habitat-hab_package }}.txt"
+            $OutputFile = "grype-results-windows-${{ inputs.hab_package }}.txt"
             $OutputFile = $OutputFile -replace '/', '-'
             Write-Host $OutputFile
-            grype dir:$PkgPath --name ${{ inputs.publish-habitat-hab_package }} | Out-File -FilePath $OutputFile -Encoding utf8
+            grype dir:$PkgPath --name ${{ inputs.hab_package }} | Out-File -FilePath $OutputFile -Encoding utf8
             echo "OUTPUT_FILE=$OutputFile" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
                     
       - name: Upload Grype Scan Results
