--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -116,6 +116,21 @@ on:
         required: false
         type: boolean
         default: false
+      perform-grype-scan:
+        description: 'Perform Grype scan on source code'
+        required: false
+        type: boolean
+        default: false
+      grype-fail-on-high:
+        description: 'Fail pipeline if Grype finds HIGH vulnerabilities'
+        required: false
+        type: boolean
+        default: false
+      grype-fail-on-critical:
+        description: 'Fail pipeline if Grype finds CRITICAL vulnerabilities'
+        required: false
+        type: boolean
+        default: false
       build:
         description: 'CI Build (language-specific)'
         required: false
@@ -763,6 +778,93 @@ jobs:
       version: ${{ inputs.version }}
       trivy-fail-on-high: ${{ inputs.trivy-fail-on-high }}
       trivy-fail-on-critical: ${{ inputs.trivy-fail-on-critical }}
+
+  run-grype:
+    name: 'Grype scan'
+    if: ${{ inputs.perform-grype-scan }}
+    runs-on: ubuntu-latest
+    needs: checkout # TODO: fix set-application-version
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+
+      - name: Determine severity threshold
+        id: severity
+        run: |
+          if [ "${{ inputs.grype-fail-on-high }}" == "true" ]; then
+            echo "level=high" >> $GITHUB_OUTPUT
+          elif [ "${{ inputs.grype-fail-on-critical }}" == "true" ]; then
+            echo "level=critical" >> $GITHUB_OUTPUT
+          else
+            echo "level=none" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Run Grype scan on repo
+        id: scan
+        uses: anchore/scan-action@v3
+        with:
+          path: .
+          fail-build: true
+          severity-cutoff: ${{ steps.severity.outputs.level }}
+          output-format: json
+  
+
+      - name: Check Grype results and fail if vulnerabilities found
+        if: always()
+        run: |
+          JSON_FILE="./results.json"
+          
+          if [ ! -f "$JSON_FILE" ] || [ -z "$JSON_FILE" ]; then
+            echo "⚠️  Grype JSON output not found"
+            exit 0
+          fi
+          
+          # Extract vulnerability counts using jq or grep fallback
+          if command -v jq &> /dev/null; then
+            CRITICAL_COUNT=$(jq '[.matches[]? | select(.vulnerability.severity == "Critical")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+            HIGH_COUNT=$(jq '[.matches[]? | select(.vulnerability.severity == "High")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+          else
+            CRITICAL_COUNT=$(grep -o '"severity":"Critical"' "$JSON_FILE" | wc -l | tr -d ' ' || echo "0")
+            HIGH_COUNT=$(grep -o '"severity":"High"' "$JSON_FILE" | wc -l | tr -d ' ' || echo "0")
+          fi
+          
+          echo ""
+          echo "============================================"
+          echo "Grype Security Scan Summary"
+          echo "============================================"
+          echo "CRITICAL vulnerabilities: $CRITICAL_COUNT"
+          echo "HIGH vulnerabilities: $HIGH_COUNT"
+          echo "============================================"
+          
+          VIOLATIONS=""
+          [ "${{ inputs.grype-fail-on-critical }}" == "true" ] && [ "$CRITICAL_COUNT" -gt 0 ] && VIOLATIONS="${VIOLATIONS}$CRITICAL_COUNT CRITICAL, "
+          [ "${{ inputs.grype-fail-on-high }}" == "true" ] && [ "$HIGH_COUNT" -gt 0 ] && VIOLATIONS="${VIOLATIONS}$HIGH_COUNT HIGH, "
+          
+          if [ -n "$VIOLATIONS" ]; then
+            echo ""
+            echo "❌ BUILD FAILED: Found ${VIOLATIONS%, }"
+            exit 1
+          fi
+          
+          echo ""
+          echo "✅ No policy violations found"
+
+      - name: Upload Grype scan results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: grype-results
+          path: ./results.json
+          retention-days: 30
+
+      # - name: Run Grype scan on repo
+      #   uses: anchore/scan-action@v3
+      #   with:
+      #     path: .
+      #     fail-build: true
+      #     severity-cutoff: high
   
     # run-srcclr:
     #   if: ${{ inputs.perform-srcclr-scan == true }}
@@ -1065,6 +1167,9 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      
+      - name: Configure git for private
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - name: Install build tools for Erlang
         if: inputs.language == 'erlang'
